--- a/app/src/main/res/layout/activity_display_books.xml
+++ b/app/src/main/res/layout/activity_display_books.xml
@@ -71,13 +71,66 @@
                 app:egUseCubic="true"
                 app:egUseOverlapFill="true"
                 app:egCurveSmoothness="0.4"
-                app:egShowValueIndicator="false"
+                app:egShowValueIndicator="true"
                 app:egIndicatorLineColor="#17344d"
                 app:egIndicatorTextColor="#17344d"
                 app:egLegendHeight="40dp"
-                app:egShowStandardValue="true"
                 android:visibility="gone"
                 />
+            <TextView
+                android:id="@+id/year_chart_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Books Read By Year"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:visibility="gone"/>
+            <org.eazegraph.lib.charts.BarChart
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="fill_parent"
+                android:layout_height="400dp"
+                android:id="@+id/year_chart"
+                app:egShowDecimal="false"
+                android:visibility="gone"
+                />
+            <TextView
+                android:id="@+id/genre_chart_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Books Read By Genre"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:visibility="gone"/>
+
+            <org.eazegraph.lib.charts.PieChart
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/genre_chart"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                app:egLegendTextSize="20sp"
+                app:egUsePieRotation="true"
+                app:egValueTextSize="30sp"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/author_chart_title"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Books Read By Author"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:visibility="gone"/>
+            <org.eazegraph.lib.charts.PieChart
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/author_chart"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
+                app:egLegendTextSize="30sp"
+                app:egUsePieRotation="true"
+                app:egValueTextSize="20sp"
+                android:visibility="gone"/>
         </LinearLayout>
     </ScrollView>
     <android.support.design.widget.FloatingActionButton
